src/css/styles.css
* {
  /* border: 3px blue solid; */
}

body {
  background: linear-gradient(#044040, #E8AA33);
  height: 97vh;
}

main {
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.left-header {
 width: 20%;
 height: 100vh;
 background: #044040;
 margin-left: -8px;
 margin-bottom: -7px;
 box-shadow: 20px 0 #044040;
 background: linear-gradient(#044040, #E8AA33);
}

.logo { 
  width: 100%;
}

h1 {
  text-align: center;
  border: 1px solid #044040;
  border-radius: -3px;
  font-size: 20px;
  color: antiquewhite;
  background: #044040;
  box-shadow: -6px -1px 20px 20px #044040;
}

.card-display {
  width: 360px;
  height: 102%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  overflow: auto;
}


.card-display img {
  width: 92%;
  height: auto;
  border-radius: 5px;
  box-shadow: 0px -1px 10px 6px;
  height: 70%;
}

.card-display article {
  width: 70%;
  height: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 10%;
  box-shadow: 0px 0px 20px 5px #e8aa33;
  border: 35px solid #145757;
  margin-top: 40px;
  transition: transform 0.2s ease-in-out;
}

.card-display article:hover {
  transform: scale(1.1);
}
.trip-card-header {
  width: 100%;
  height: 51%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #044040;
  border: outset 5px #E8AA33;
  border-bottom: none;
}

.trip-card-location {
  margin: 0;
  font-size: 26px;
  color: antiquewhite;
  padding-bottom: 10px;
}

.trip-card-body {
  width: 100%;
  height: 48%;
  background: linear-gradient(#044040, #E8AA33);
  border: outset 5px #E8AA33;
    border-top: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.trip-details {
  color: antiquewhite;
  font-size: 20px;
  text-align: center;
}
.trip-cost {
  color: antiquewhite;
    font-size: 23px;
}

.buttons {
  margin-left: 30px;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: flex-start;
    height: 90%;
    gap: 15px;
}

button {
  /* font-size: 20px;
  background: linear-gradient(#e8aa3326, #e8aa33a6);
    color: antiquewhite;
    transition: transform 0.2s ease-in-out; */

    font-size: 20px;
    color: antiquewhite;
    transition: transform 0.2s ease-in-out;
    background: #044040b5;
    box-shadow: 0px 0px 5px 0px #e8aa33;
}


button:hover {
  transform: scale(1.1);
}

.form {
  display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 65%;
    height: 100%;
    align-items: center;
}

.pending-card-display {
  height: 45%;
  width: 100%;
}

#booking-Form {
  width: 100%;
    align-items: center;
    display: flex;
    height: 54%;
}

.pending-trip {
  display: flex !important;
    flex-direction: row !important;
    align-items: flex-start !important;
    height: 45% !important;
}

.pending-header {
  height: 100%;
    border: outset 5px #E8AA33;
    border-right: none;
}

.pending-body {
  height: 100%;
  border: outset 5px #E8AA33;
    border-left: none;
}

.past-trip-details {
  display: flex;
    align-items: center;
    flex-direction: column;
  margin: 0;
  width: 100%;
  height: 20%;
  font-size: 20px;
}

.hidden {
  display: none;
}

